--- a/src/button/button.css
+++ b/src/button/button.css
@@ -1,13 +1,13 @@
 .root {
     display: inline-block;
     cursor: pointer;
-    color: #4e7494;
+    color: $button-color;
     background-color: transparent;
     border-width: 1px;
     border-style: solid;
-    border-color: #4e7494;
+    border-color: $button-color;
     border-radius: 3px;
-    font-size: 16px;
+    font-size: $font-size;
     padding: .375rem .75rem;
     line-height: 1.5;
     width: auto;
@@ -15,12 +15,12 @@
     transition: background-color .15s ease, border-color .15s ease;
 
     &:not(.disabled):hover {
-        background-color: #4e7494;
+        background-color: $button-color;
         color: #fff;
     }
 
     &.disabled {
-        background-color: #4e7494;
+        background-color: $button-color;
         color: #fff;
         opacity: 0.35;
         cursor: not-allowed;
