--- a/src/table/table.css
+++ b/src/table/table.css
@@ -16,8 +16,6 @@
      padding: .75rem 1.25rem;
      font-size: 0.8rem;
      font-weight: 600;
-     width: 1%;
-     white-space: nowrap;
 }
 
 .row {
@@ -30,6 +28,13 @@
 
 .cell {
     padding: .75rem 1.25rem;
+    width: 1%;
+    white-space: nowrap;
+
+    &:last-child {
+        width: "auto";
+        white-space: normal;
+    }
 }
 
 .paginationContainer {
