Doc to use Table component - Fix width bug

--- a/src/table/table.css
+++ b/src/table/table.css
@@ -33,7 +33,7 @@
     white-space: nowrap;
 
     &:last-child {
-        width: "auto";
+        width: auto;
         white-space: normal;
     }
 }
