--- a/src/table/table.css
+++ b/src/table/table.css
@@ -55,3 +55,14 @@
     width: 100%;
     padding: .375rem .75rem;
 }
+
+.sortButton {
+    background: transparent;
+    border: none;
+    font-weight: inherit;
+    cursor: pointer;
+}
+
+.sortIcon {
+    margin-right: 5px;
+}
