--- a/src/popover/popover.css
+++ b/src/popover/popover.css
@@ -5,9 +5,12 @@
     background-color: #fff;
     box-shadow: $shadow;
     padding: $popover-padding;
-    display: none;
+    opacity: 0;
+    visibility: hidden;
+    transition: opacity .25s ease-in-out, visibility .25s ease-in-out;
 }
 
 .visible {
-    display: block;
+    opacity: 1;
+    visibility: visible;
 }
