--- a/src/table/table.css
+++ b/src/table/table.css
@@ -8,6 +8,11 @@
     margin: 0;
 }
 
+.responsive {
+    display: block;
+    overflow-x: auto;
+}
+
 .headerRow {
     border-bottom: 1px solid $table-header-row-border;
 }
@@ -37,6 +42,7 @@
 
 .paginationContainer {
     text-align: right;
+    margin: .75rem;
 }
 
 .paginationLabel {
