Add overflow initial to the svg element of LineChart

--- a/src/line-chart/line-chart.css
+++ b/src/line-chart/line-chart.css
@@ -8,13 +8,19 @@
     }
 }
 
+.svg {
+    overflow: initial;
+}
+
 .linePath {
     stroke-width: 2px;
     fill: transparent;
     stroke: $line-chart-default-line-color;
 }
 
-.linePathDot {}
+.linePathDot {
+
+}
 
 .axisGroup {
     & line {
